[gd_scene load_steps=7 format=3 uid="uid://fnn75ndqco0y"]

[ext_resource type="Script" path="res://enemy/yellow_bullet.gd" id="1_3bkmq"]
[ext_resource type="Texture2D" uid="uid://w62tm61pb6pp" path="res://pics/enemy/green_critter.png" id="2_yprod"]

[sub_resource type="CircleShape2D" id="CircleShape2D_51rf7"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_ke2na"]
radius = 22.0227

[sub_resource type="Animation" id="Animation_tg7el"]
resource_name = "collided"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"brake"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.3, 0.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1e0tm"]
_data = {
"collided": SubResource("Animation_tg7el")
}

[node name="yellow_beam" type="CharacterBody2D"]
z_index = 4
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_3bkmq")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_yprod")
region_enabled = true
region_rect = Rect2(320, 320, 160, 320)

[node name="hurtbox" type="Area2D" parent="." groups=["enemy_attack"]]

[node name="coll" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_51rf7")

[node name="deflected" type="Area2D" parent="." groups=["deflected_beam"]]

[node name="coll_deflect" type="CollisionShape2D" parent="deflected"]
shape = SubResource("CircleShape2D_ke2na")
debug_color = Color(0.976471, 0, 0.392157, 0.419608)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1e0tm")
}

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="deflected" to="." method="_on_deflected_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
